testsuite/poke.pkl/cast-diag-3.pk
/* { dg-do compile } */

defun foo = void:
  {
   defvar v = 10 as any; /* { dg-error "" } */
  }
